--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,15 @@
-// Vendor
-// ---------------------------------
-
+// vendor
 @import "vendor/normalize";
+@import "vendor/swiper-bundle.css";
+
+// common
+@import "common/fonts.scss";
+@import "common/variables.scss";
+@import "common/mixins.scss";
+@import "common/global.scss";
+@import "common/visually-hidden.scss";
+
+// blocks
+@import "blocks/button.scss";
+@import "blocks/header.scss";
+@import "blocks/hero.scss";
