--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -20,7 +20,7 @@
     letter-spacing: 0.24px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     font-size: 14px;
     line-height: 14px;
     letter-spacing: 0.28px;
@@ -64,7 +64,7 @@
       right: 18px;
     }
 
-    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    @media (min-width: $tablet-width-min) {
       top: 23px;
       right: 23px;
   }
