feat: add styles in programs mobile block + tests + add all graphics in programs block

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,5 +11,8 @@
 
 // blocks
 @import "blocks/button.scss";
+@import "blocks/arrow.scss";
+@import "blocks/about.scss";
 @import "blocks/header.scss";
 @import "blocks/hero.scss";
+@import "blocks/programs.scss";
