--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,9 +2,8 @@
   position: relative;
   display: block;
   width: 136px;
-  height: 56px;
-  padding: 21px;
-  background-color: $basic-light-color;
+  height: 56px; // разбить по категориям мобилка плантеш десктоп
+  padding: 21px; // разбить по категориям мобилка плантеш десктоп
   border: 1px solid $accent-color;
   border-radius: 30px;
   color: $accent-color;
@@ -15,12 +14,16 @@
   cursor: pointer;
 
   @media (max-width: $mobile-width-max) {
+    padding: 16px 21px;
+    height: 44px;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 0.24px;
   }
 
   @media (min-width: $tablet-width-min) {
+    padding: 20px 31px;
+    height: 56px;
     font-size: 14px;
     line-height: 14px;
     letter-spacing: 0.28px;
@@ -30,7 +33,7 @@
     content: "";
     position: absolute;
     top: 4px;
-    right: 5px;
+    right: 4px;
     display: block;
     background-color: $accent-color;
     border-radius: 50%;
@@ -61,12 +64,20 @@
 
     @media (max-width: $mobile-width-max) {
       top: 17px;
-      right: 18px;
+      right: 17px;
     }
 
     @media (min-width: $tablet-width-min) {
       top: 23px;
       right: 23px;
+    }
   }
 }
+
+.button--primary {
+  background-color: $basic-light-color;
+}
+
+.button--secondary {
+  background-color: transparent;
 }
