--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,10 +1,11 @@
 .hero {
   position: relative; // для header
+  width: 100%;
 }
 
 .hero__main-wrapper {
   // margin: 0 auto;
-  // width: 100%;
+  width: 100%;
 
   @media (max-width: $mobile-width-max) {}
 
@@ -181,15 +182,11 @@
 
 .hero__details {
   @media (max-width: $mobile-width-max) {
-    padding: 16px 21px;
     width: 154px;
-    height: 44px;
   }
 
   @media (min-width: $tablet-width-min) {
-    padding: 21px 31px;
     width: 198px;
-    height: 56px;
   }
 
   @media (min-width: $desktop-width-min) {
@@ -244,9 +241,6 @@
   background-color: $accent-color;
 }
 
-// .swiper-pagination-fraction,
-// .swiper-pagination-custom,
-// .swiper-horizontal>.swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal {
   width: fit-content;
   top: auto;
