--- a/source/sass/blocks/arrow.scss
+++ b/source/sass/blocks/arrow.scss
@@ -1,9 +1,16 @@
 .arrow {
-  width: 71px;
   height: 22px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: $mobile-width-max) {
+    width: 71px;
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: 74px;
+  }
 }
 
 .arrow__button {
@@ -15,7 +22,7 @@
 
   &::after {
     font-size: 22px;
-    mask-size: 9px 9px;
+    mask-size: 10px 10px;
     mask-position: center;
     background-color: $accent-color;
     mask-repeat: no-repeat;
@@ -39,9 +46,10 @@
   //   background-color: #1c3374;
   // }
 
-  // &:disabled {
-  //   background-color: $disabled-color;
-  // }
+  &:disabled {
+    color: $disabled-color;
+    background-color: transparent;
+  }
 }
 
 .arrow__button--prev::after {
