--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,14 +1,14 @@
 .programs {
   @media (max-width: $mobile-width-max) {
-    padding: 56px 15px;
+    padding: 56px 15px 50px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    padding: 50px 0 25px 45px;
+    padding: 50px 0 47px 45px; // 50 0 25 45
   }
 
   @media (min-width: $desktop-width-min) {
-    padding: 62px 100px 70px;
+    padding: 62px 100px 71px;
   }
 }
 
