--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import "blocks/button.scss";
 @import "blocks/arrow.scss";
 @import "blocks/about.scss";
+@import "blocks/grant.scss";
 @import "blocks/header.scss";
 @import "blocks/hero.scss";
 @import "blocks/programs.scss";
