--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,9 +11,11 @@
 
 // blocks
 @import "blocks/button.scss";
+@import "blocks/button-arrow.scss";
 @import "blocks/arrow.scss";
 @import "blocks/about.scss";
 @import "blocks/grant.scss";
 @import "blocks/header.scss";
 @import "blocks/hero.scss";
+@import "blocks/news.scss";
 @import "blocks/programs.scss";
